--- a/templates/Convert_Requirements_BDD.html
+++ b/templates/Convert_Requirements_BDD.html
@@ -473,7 +473,7 @@
 
 </head>
 <body>
-<h1 align=center style="font-size: 24px;">Fine-tune requirements</h1>
+<h1 align=center style="font-size: 24px;">Transform requirements into BDD/Gherkins </h1>
 
     <div class="container mt-5">
 
@@ -498,7 +498,7 @@
         <textarea id="inputTextArea" class="form-control" placeholder="Enter requirements..."></textarea>
     </div>
     <div class="col-md-6">
-        <label for="outputTextArea" class="mt-2"><strong>Fine tuned requirments</strong></label>
+        <label for="outputTextArea" class="mt-2"><strong>Requirments in BDD/Gherkins format</strong></label>
         <textarea id="outputTextArea" class="form-control" placeholder="Output will be displayed here..." disabled></textarea>
     </div>
 </div>
@@ -520,7 +520,7 @@
 function runPythonScript() {
 	document.getElementById('loadingSpinner').style.display = 'inline-block';
 
-    var pythonScriptPath = "AzureOpenAI_fine_tuned_requirements.py";
+    var pythonScriptPath = "AzureOpenAI_requirements_BDD.py";
     var inputText = document.getElementById('inputTextArea').value;
 
     // Make an AJAX request to your Flask server
