--- a/templates/Generate_APITestCases.html
+++ b/templates/Generate_APITestCases.html
@@ -63,7 +63,7 @@
                 <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="{{ url_for('Generate_Requirements') }}">Fine tune requirements</a>
-						<a class="collapse-item" href="{{ url_for('Generate_Requirements') }}">Convert into BDD/Gherkins</a>
+						<a class="collapse-item" href="{{ url_for('Convert_Requirements_BDD') }}">Convert into BDD/Gherkins</a>
                     </div>
                 </div>
             </li>
@@ -77,9 +77,9 @@
                 <div id="collapseUtilities1" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="Generate.html">Generate unit test cases</a>
+                        <a class="collapse-item" href="{{ url_for('Generate_UnitTestCases') }}">Generate unit test cases</a>
 						<a class="collapse-item" href="Generate.html">Find Security vulnerabilities</a>
-                        <a class="collapse-item" href="Generate.html">Convert Code</a>
+                        <a class="collapse-item" href="{{ url_for('Code_migration') }}">Convert Code</a>
                         <a class="collapse-item" href="Generate.html">Optimize code</a>
                         <a class="collapse-item" href="Generate.html">Code Reverse Engineering</a>
 						<a class="collapse-item" href="Generate.html">Generate Code arch doc</a>
@@ -100,7 +100,7 @@
                         <a class="collapse-item" href="{{ url_for('Generate_TestCases')}}">Generate test cases for UI</a>
 						<a class="collapse-item" href="{{ url_for('Generate_APITestCases')}}">Generate test cases for API</a>
 						<a class="collapse-item" href="{{ url_for('Generate_TestCasesMetlifePOC')}}">Generate API tests with data</a>
-                        <a class="collapse-item" href="Generate.html">Convert Code</a>
+                        <a class="collapse-item" href="{{ url_for('Code_migration') }}">Convert Code</a>
                         <a class="collapse-item" href="Generate.html">Optimize test cases</a>
                         <a class="collapse-item" href="Generate.html">Code Reverse Engineering</a>
 						<a class="collapse-item" href="Generate.html">Generate Test Data</a>
@@ -138,7 +138,7 @@
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="Generate.html">Locate Originating Cause</a>
-						<a class="collapse-item" href="Generate.html">Code Migration</a>
+						<a class="collapse-item" href="{{ url_for('Code_migration') }}">Code Migration</a>
                         <a class="collapse-item" href="Generate.html">Code Fine-Tuning</a>
                         <a class="collapse-item" href="{{ url_for('Code_Documentation')}}">NexGen Code Documentation</a>
                     </div>
