--- a/templates/Code_migration.html
+++ b/templates/Code_migration.html
@@ -82,9 +82,8 @@
                         <a class="collapse-item" href="{{ url_for('Generate_UnitTestCases') }}">Generate unit test cases</a>
 						<a class="collapse-item" href="Generate.html">Find Security vulnerabilities</a>
                         <a class="collapse-item" href="{{ url_for('Code_migration') }}">Convert Code</a>
-                        <a class="collapse-item" href="Generate.html">Optimize code</a>
-                        <a class="collapse-item" href="Generate.html">Code Reverse Engineering</a>
-						<a class="collapse-item" href="Generate.html">Generate Code arch doc</a>
+                        <a class="collapse-item" href="{{ url_for('Generate_code_optimization')}}">Optimize code</a>
+						<a class="collapse-item" href="{{ url_for('Code_Documentation')}}">NexGen Code Documentation</a>
                     </div>
                 </div>
             </li>
@@ -104,7 +103,7 @@
 						<a class="collapse-item" href="{{ url_for('Generate_TestCasesMetlifePOC')}}">Generate API tests with data</a>
                         <a class="collapse-item" href="{{ url_for('Code_migration') }}">Convert Code</a>
                         <a class="collapse-item" href="Generate.html">Optimize test cases</a>
-                        <a class="collapse-item" href="Generate.html">Code Reverse Engineering</a>
+						<a class="collapse-item" href="{{ url_for('Code_Documentation')}}">NexGen Code Documentation</a>
 						<a class="collapse-item" href="Generate.html">Generate Test Data</a>
 
                     </div>
@@ -121,7 +120,7 @@
                 <div id="collapseUtilities3" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
-                        <a class="collapse-item" href="{{ url_for('Generate_TestCases')}}">Generate performance test cases</a>
+                        <a class="collapse-item" href="{{ url_for('Generate_performanceTestCases')}}">Generate performance test cases</a>
 
 
                     </div>
@@ -141,7 +140,7 @@
                     <div class="bg-white py-2 collapse-inner rounded">
                         <a class="collapse-item" href="Generate.html">Locate Originating Cause</a>
 						<a class="collapse-item" href="{{ url_for('Code_migration') }}">Code Migration</a>
-                        <a class="collapse-item" href="Generate.html">Code Fine-Tuning</a>
+                        <a class="collapse-item" href="{{ url_for('Generate_code_optimization')}}">Code Fine-Tuning</a>
                         <a class="collapse-item" href="{{ url_for('Code_Documentation')}}">NexGen Code Documentation</a>
                     </div>
                 </div>
@@ -492,7 +491,7 @@
         <!-- Buttons -->
 <div class="row">
     <div class="col-md-12">
-        <label for="languageDropdown" id="dropdownLabel"  class="mt-2">Select Framework/Programming Language</label>
+        <label for="languageDropdown" id="dropdownLabel"  class="mt-2">Select Target Framework/Programming Language</label>
         <select id="languageDropdown" class="form-control ml-2">
             <option value="COBOL4">COBOL4</option>
             <option value="COBOL6">COBOL6</option>
