Add design file

--- a/templates/Generate_TestCasesMetlifePOC.html
+++ b/templates/Generate_TestCasesMetlifePOC.html
@@ -95,6 +95,7 @@
                 <div id="collapseUtilities" class="collapse" aria-labelledby="headingUtilities"
                     data-parent="#accordionSidebar">
                     <div class="bg-white py-2 collapse-inner rounded">
+					    <a class="collapse-item" href="{{ url_for('Generate_TestScenarios')}}">Generate test scenarios</a>
                         <a class="collapse-item" href="{{ url_for('Generate_TestCases')}}">Generate test cases for UI</a>
 						<a class="collapse-item" href="{{ url_for('Generate_APITestCases')}}">Generate test cases for API</a>
 						<a class="collapse-item" href="{{ url_for('Generate_TestCasesMetlifePOC')}}">Generate API tests with data</a>
